--- a/index.html
+++ b/index.html
@@ -22,5 +22,10 @@
 
     <link rel="stylesheet" href="css/styles.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="grid grid--1x2">
+      <div class="box box-one"></div>
+      <div class="box box-two"></div>
+    </div>
+  </body>
 </html>
