--- a/index.html
+++ b/index.html
@@ -22,10 +22,5 @@
 
     <link rel="stylesheet" href="css/styles.css" />
   </head>
-  <body>
-    <div class="grid grid--1x2">
-      <div class="box box-one"></div>
-      <div class="box box-two"></div>
-    </div>
-  </body>
+  <body></body>
 </html>
