Defined styles for icons.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap"
       rel="stylesheet"
     />
+
+    <script
+      src="https://kit.fontawesome.com/a0deec87a0.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Frontend Mentor | Huddle landing page with curved sections</title>
 
     <link rel="stylesheet" href="css/styles.css" />
