--- a/index.html
+++ b/index.html
@@ -28,49 +28,11 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <article class="feature">
-      <picture>
-        <img
-          class="feature__image"
-          src="images/illustration-grow-together.svg"
-        />
-      </picture>
-      <div class="feature__content">
-        <h2>Grow Together</h2>
-        <p>
-          Generate meaningful discussions with your audience and build a strong,
-          loyal community. Think of the insightful conversations you miss out on
-          with a feedback form.
-        </p>
-      </div>
-    </article>
-    <article class="feature">
-      <picture>
-        <img
-          class="feature__image"
-          src="images/illustration-flowing-conversation.svg"
-        />
-      </picture>
-      <div class="feature__content">
-        <h2>Flowing Conversations</h2>
-        <p>
-          You wouldn't paginate a conversation in real life, so why do it
-          online? Our threads have just-in-time loading for a more natural flow.
-        </p>
-      </div>
-    </article>
-    <article class="feature">
-      <picture>
-        <img class="feature__image" src="images/illustration-your-users.svg" />
-      </picture>
-      <div class="feature__content">
-        <h2>Your Users</h2>
-        <p>
-          It takes no time at all to integrate Huddle with your app's
-          authentication solution. This means, once signed in to your app, your
-          users can start chatting immediately.
-        </p>
-      </div>
-    </article>
+    <div class="callout">
+      <h3>Ready To Build Your Community?</h3>
+      <button type="submit" class="btn btn--primary">
+        Get Started For Free
+      </button>
+    </div>
   </body>
 </html>
